[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/HUD/Minimaps/minimap_cover.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD/Minimaps/player_icon.png" type="Texture" id=3]
[ext_resource path="res://Resources/HUD/Minimaps/minimap.gd" type="Script" id=6]

[sub_resource type="TileSet" id=1]
0/name = "1"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 2, 2 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "2"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 2, 0, 2, 2 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "3"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 4, 0, 2, 2 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Minimap" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.000244141
margin_top = 0.00012207
margin_right = 0.000244141
margin_bottom = 0.00012207
rect_scale = Vector2( 3.5, 3.5 )
script = ExtResource( 6 )

[node name="MinimapTexture" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -75.0
margin_right = -12.0
margin_bottom = -7.00002
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MinimapTileMap" type="TileMap" parent="."]
position = Vector2( -80, -75 )
tile_set = SubResource( 1 )
cell_size = Vector2( 2, 2 )
format = 1
__meta__ = {
"_edit_bone_": true
}

[node name="PlayerMarker" type="Sprite" parent="MinimapTileMap"]
position = Vector2( 2, 31 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="MinimapShadow" type="TextureRect" parent="."]
margin_left = -80.0
margin_top = -75.0
margin_right = -80.0
margin_bottom = -75.0
__meta__ = {
"_edit_use_anchors_": false
}
